--- a/style.css
+++ b/style.css
@@ -799,22 +799,14 @@ margin:20px 22%;
   margin-left: 7px;
   max-width:100%;
 } 
-.boximgct {
+.profile-coment img{
   width: 45px;
   height: 45px;
   border-radius: 50%;
   border: 1px solid #fff;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.boximgct img {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
-}.info-txt-com{
+}
+.info-txt-com{
   background: rgba(0,0,0,0.2);
   padding: 10px;
   border-radius: 0 15px 15px 15px;
