--- a/ustyle.css
+++ b/ustyle.css
@@ -102,6 +102,7 @@ button {
   background: #404040;
   border: 2px solid #fff;
   align-items: center;
+  margin: 10px 0;
 }
 .box-img{
   width: 40px;
@@ -129,4 +130,15 @@ button {
 }
 #true:hover{
   color: #fff
+}
+
+.not-adime{
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  color: #fff;
+  background :#171717;
 }
